src/App.scss
@import './theme';

.app {
  height: 100%;
  width: 100%;

  font-family: InriaSerif-Regular, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: $text-color;
  background-color: $bg-color;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

.chapter-content {
  max-width: 1920px;
  padding: 0 calc(240px + 16px);
}

.header-inner {
  height: 80px;
  width: 100%;
  padding-bottom: 32px;
  position: sticky;
  top: 16px;
}

.header-outer {
  height: 100vh;
  // hack to prevent underlying elements to shine through
  width: 101%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: sticky;

  // hack to make transition between full screen heading and sticky header possible
  top: calc(80px + 16px - 100vh);
  // hack to make this possible with <Parallax> too
  z-index: 99;
  // hack to prevent underlying elements to shine through
  margin-left: -2px;
  background-color: $bg-color;
}

.chapter-heading {
  font-size: 40px;
}

.chapter-body-wrapper {
  padding: 16px 0;

  display: flex;
  flex-direction: column;
  gap: 80px;
}

#root {
  text-align: center;
  width: 100%;
  height: 100%;
}

